fix import paths of styles & images

--- a/styles/base.css
+++ b/styles/base.css
@@ -12,21 +12,21 @@
 }
 
 h1 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Merriweather', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 48px;
+  font-size: 58px;
 }
 
 h3 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Merriweather', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 38px;
 }
 
 h5 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Merriweather', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
