--- a/styles/prinssen-homepage.css
+++ b/styles/prinssen-homepage.css
@@ -1,48 +1,22 @@
 @import "../styles/base.css";
 
-
-
-
-
-
-header {
-  min-height: 580px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-header {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.hero-header {
   background-image: url('../images/Vivier Glaubst du an die Unsterblichkeit der Seele.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: white;
 }
 
-header #overlay {
-  padding: 0 120px;
-  width: 100%;
-  background-color: hsla(0, 0%, 0%, .55);
-}
-
-header #overlay {
-  width: 100%;
+section {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-#overlay div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+section * {
   flex: 1;
+  text-align: center;
 }
 
-header h1 {
-  align-self: center;
+@media screen and (max-width: 800px) {
+  #overlay div { 
+    padding: 0 4px;
+  }
 }
