--- a/styles/prinssen-review-app.css
+++ b/styles/prinssen-review-app.css
@@ -1,8 +1,5 @@
 @import "../styles/base.css";
 
-
-
-
 :host {
   display: flex;
   flex-direction: column;
@@ -13,6 +10,8 @@
 }
 
 header {
+  position: sticky;
+  top: 0;
   display: flex;
   height: 60px;
   width: 100%;
@@ -21,19 +20,26 @@ header {
 
 header > nav { 
   width: 100%;
-  max-width: 1080px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 0 auto;
   align-items: center;
+  padding: 0 60px;
+  max-height: 60px;
 }
 
-header > nav > ul > li {
-  display: inline-block;
-  font-family: 'Karla', sans-serif;
-  padding: 0 12px;
+nav ul  {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
+
+nav ul li  {
+  padding: 0 12px;
+  line-height: 58px;
+}
+
 
 main {
   height: 100%;
@@ -45,11 +51,38 @@ main section {
   padding: 64px 128px;
 }
 
+footer {
+  background-color: #E8DA58;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+nav ul li:not([data-active]) a {
+  color: black;
+}
 
 .text-center-block {
   text-align: center;
 }
 
+nav ul li[data-active] a, nav ul li:hover a {
+  color: var(--prinssen-highlight-color, black);
+}
+
+nav ul li[data-active] {
+  border-bottom: 3px solid var(--prinssen-highlight-color, black);
+}
+
+
+
+
 [hidden] {
   display: none;
+}
+
+@media screen and (max-width: 800px) {
+  header > nav { 
+    padding: 0 4px;
+  }
 }
